[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-gateway-py"
version = "0.1.0"
description = "Standalone HTTP gateway for Astrocyte (FastAPI over astrocyte-py); configure via astrocyte.yaml and optional mip.yaml"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.8.0,<2",
    "cryptography>=42",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "astrocyte[worker]",
    "astrocyte-postgres",
    # astrocyte-age removed in M9; see ADR-008
    "psycopg[binary]>=3.1",
]
postgres = ["astrocyte-postgres"]
# `age` extra removed in M9 (see ADR-008)
worker = [
    "astrocyte[worker]",
    "psycopg[binary]>=3.1",
]
s3 = ["astrocyte-ingestion-s3"]
document = ["astrocyte-ingestion-document"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

# Local-dev source resolution — sibling packages resolve from this monorepo,
# not PyPI. The published wheel uses the version pin in [project.dependencies]
# (``astrocyte`` is on PyPI as of 0.13.1).
[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
astrocyte-postgres = { path = "../../adapters-storage-py/astrocyte-postgres", editable = true }
astrocyte-ingestion-s3 = { path = "../../adapters-ingestion-py/astrocyte-ingestion-s3", editable = true }
astrocyte-ingestion-document = { path = "../../adapters-ingestion-py/astrocyte-ingestion-document", editable = true }

[project.scripts]
astrocyte-gateway-py = "astrocyte_gateway.main:main"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Mirrors astrocyte-py. SLF001 enforces the public/private API contract at the
# package boundary — the gateway must consume astrocyte through its public
# surface (e.g. brain.check_access), never `brain._policy` / `brain._pipeline`.
select = ["E", "W", "F", "I", "SLF001", "RUF022"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SLF001"]

[tool.ruff.format]
quote-style = "double"

# ── Import contracts (import-linter) ─────────────────────────────────────────
# Run: uv run --with import-linter lint-imports
# The gateway consumes astrocyte exclusively through its public surface
# (`from astrocyte import ...`); underscore modules are internal to core.
# Symbols the gateway genuinely needs get PROMOTED to astrocyte's public
# __init__ (e.g. check_access, log_safe, resolve_provider) instead of noqa'd.
[tool.importlinter]
root_packages = ["astrocyte_gateway", "astrocyte"]

[[tool.importlinter.contracts]]
name = "gateway must not import astrocyte private modules"
type = "forbidden"
source_modules = ["astrocyte_gateway"]
# Direct imports only: the gateway importing `astrocyte` (whose own __init__
# pulls in _astrocyte etc.) is the intended public path, not a violation.
allow_indirect_imports = true
forbidden_modules = [
    "astrocyte._astrocyte",
    "astrocyte._discovery",
    "astrocyte._hooks",
    "astrocyte._ingest_spi",
    "astrocyte._log_safety",
    "astrocyte._mcp_identity",
    "astrocyte._multi_bank",
    "astrocyte._output_scanner",
    "astrocyte._policy",
    "astrocyte._provider_dispatch",
    "astrocyte._recall_params",
    "astrocyte._validation",
]
