[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-pgvector"
version = "0.1.0"
description = "PostgreSQL pgvector VectorStore adapter for Astrocyte"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.1.0,<0.2",
    "pgvector>=0.4",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.entry-points."astrocyte.vector_stores"]
pgvector = "astrocyte_pgvector.store:PgVectorStore"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_pgvector"]

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
