[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-pgvector"
dynamic = ["version"]
description = "PostgreSQL pgvector VectorStore adapter for Astrocyte"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.1.0,<0.2",
    "pgvector>=0.4",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[project.entry-points."astrocyte.vector_stores"]
pgvector = "astrocyte_pgvector.store:PgVectorStore"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }  # Git root is two levels up

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_pgvector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
